# mainWindow

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
src/app/: CMakeLists.txt  imgui_impl_glfw_gl3.cpp  main.cpp
src/include/: shader.h  stb_image.h
src/include/shader/: shader.h
src/shaders/: lampShader.fs  shader.fs  shader.vs
